using UnityEngine;
using UnityEngine.UI;

public class AccessibilityManager : MonoBehaviour
{
    bool ToggleSubtitles()
    {
        return true;
    }
    
    void AdjustTextSize(int newSize)
    {
    }
}
