using UnityEditor;
using UnityEngine;

public class AudioManager : MonoBehaviour
{
#if UNITY_EDITOR
    void PlaySFX(GUID ID)
    {

    }

    void PlayBGM(GUID ID)
    {
    }

    void fadeBGM(GUID newID)
    {

    }
#endif
}
