using UnityEngine;

public class GraphicsManager : MonoBehaviour
{
    void ApplyQualityPreset()
    {

    }
}
